--- a/scripts/population_graphs_rmd.Rmd
+++ b/scripts/population_graphs_rmd.Rmd
@@ -11,6 +11,7 @@ library(kableExtra)
 library(dplyr)
 library(ggplot2)
 library(janitor)
+library(tidyr)
 ```
 
 ## R Markdown
@@ -18,59 +19,58 @@ library(janitor)
 Population data for reopened resturants
 
 ```{r cars, echo=FALSE}
-reopened_resturants = read.csv('../dataset/reopened_resturants.csv', stringsAsFactors = FALSE)
+all_resturants = read.csv('../dataset/all_resturants.csv', stringsAsFactors = FALSE)
 ```
 
 ## Including Plots
 
-Some tables
 
 ```{r one, echo=FALSE}
 #Business operation year freq table
-kbl(tabyl(reopened_resturants$Business_Operation_Year, sort = TRUE), booktabs = T) %>%
+kbl(tabyl(all_resturants$Business_Operation_Year, sort = TRUE), booktabs = T) %>%
   kable_styling(latex_options = c("striped", "scale-down"))
 # 1-5 years owns takes 36% of dataset
 
 #Frachaise
-kbl(tabyl(reopened_resturants$Franchise, sort = TRUE), booktabs = T) %>%
+kbl(tabyl(all_resturants$Franchise, sort = TRUE), booktabs = T) %>%
   kable_styling(latex_options = c("striped", "scale-down"))
 #Even split - 59% Non frachaise vs. 41% frachaise
 
 #Own / Lease
-kbl(tabyl(reopened_resturants$Own_Lease, sort = TRUE), booktabs = T) %>%
+kbl(tabyl(all_resturants$Own_Lease, sort = TRUE), booktabs = T) %>%
   kable_styling(latex_options = c("striped", "scale-down"))
 #Lease 50%, own 40%, lease to own 10%
 
 
 #Pricepoint
-kbl(tabyl(reopened_resturants$Price_Point_Target, sort = TRUE), booktabs = T) %>%
+kbl(tabyl(all_resturants$Price_Point_Target, sort = TRUE), booktabs = T) %>%
   kable_styling(latex_options = c("striped", "scale-down"))
 #Average 39%, Low-end 40%, High-end 21%
 
 #Dine-in Service
-kbl(tabyl(reopened_resturants$Dine_In_Service, sort = TRUE), booktabs = T) %>%
+kbl(tabyl(all_resturants$Dine_In_Service, sort = TRUE), booktabs = T) %>%
   kable_styling(latex_options = c("striped", "scale-down"))
 #70% Y 30% N
 
 
 #Helpfulness
-kbl(tabyl(reopened_resturants$Helpfulness_Factor, sort = TRUE), booktabs = T) %>%
+kbl(tabyl(all_resturants$Helpfulness_Factor, sort = TRUE), booktabs = T) %>%
   kable_styling(latex_options = c("striped", "scale-down"))
 #average split of 33%
 ```
 
-Average of income, profit and staff members
+
 ```{r two, echo=FALSE}
 #Average of everything table
-ave_Income2019 <- mean(reopened_resturants$Income_052019_102019)
-ave_Income2020 <- mean(reopened_resturants$Income_052020_102020)
-ave_Income2021 <- mean(reopened_resturants$Income_052021_102021)
-ave_Profit2019 <- mean(reopened_resturants$Profit_052019_102019)
-ave_Profit2020 <- mean(reopened_resturants$Profit_052020_102020)
-ave_Profit2021 <- mean(reopened_resturants$Profit_052021_102021)
-ave_Staff2019 <- mean(reopened_resturants$Number_Of_Staff_Before_Covid)
-ave_Staff2020 <- mean(reopened_resturants$Number_Of_Staff_During_Covid)
-ave_Staff2021 <- mean(reopened_resturants$Number_Of_Staff_During_Reopen)
+ave_Income2019 <- mean(all_resturants$Income_052019_102019)
+ave_Income2020 <- mean(all_resturants$Income_052020_102020)
+ave_Income2021 <- mean(all_resturants$Income_052021_102021)
+ave_Profit2019 <- mean(all_resturants$Profit_052019_102019)
+ave_Profit2020 <- mean(all_resturants$Profit_052020_102020)
+ave_Profit2021 <- mean(all_resturants$Profit_052021_102021)
+ave_Staff2019 <- mean(all_resturants$Number_Of_Staff_Before_Covid)
+ave_Staff2020 <- mean(all_resturants$Number_Of_Staff_During_Covid)
+ave_Staff2021 <- mean(all_resturants$Number_Of_Staff_During_Reopen)
 
 average_table <- data.frame("ave_Income2019" = ave_Income2019, 
                             "ave_Income2020" = ave_Income2020, 
@@ -91,36 +91,63 @@ kbl(average_staff, booktabs = T) %>%
   kable_styling(latex_options = c("striped", "scale-down"))
 ```
 
-
-Three year comparison of profits. Red - 2019, Green - 2020, Blue - Reopened 2021
 ```{r three, echo=FALSE}
-ggplot(data = reopened_resturants) +
-  geom_histogram(aes(x = Profit_052019_102019, y=(..count..)/sum(..count..)), 
-                 alpha=0.3, fill ="red",position="identity") +
-  geom_histogram(aes(x = Profit_052020_102020, y=(..count..)/sum(..count..)), 
-                 alpha=0.3,, fill ="green",position="identity") +
-  geom_histogram(aes(x = Profit_052021_102021, y=(..count..)/sum(..count..)), 
-                 alpha=0.7,, fill ="blue",position="identity")
+plot_profit <- data.frame(Profit_052019_102019 = all_resturants$Profit_052019_102019, 
+                                  Profit_052020_102020 = all_resturants$Profit_052020_102020, 
+                                  Profit_052021_102021 = all_resturants$Profit_052021_102021)
+plot_profit <- gather(plot_profit)
+
+
+ggplot(plot_profit, aes(x = value, fill = key)) +
+  geom_density(kernel = "gaussian", alpha = 0.2)
+
+
 ```
 
-Three year comparison of income. Red - 2019, Green - 2020, Blue - Reopened 2021
+
+```{r whatever, echo=FALSE}
+paste("Min 2019:", min(all_resturants$Profit_052019_102019))
+paste("Mean 2019:", mean(all_resturants$Profit_052019_102019))
+paste("Max 2019:", max(all_resturants$Profit_052019_102019))
+paste("Min 2020:", min(all_resturants$Profit_052020_102020))
+paste("Mean 2020:", mean(all_resturants$Profit_052020_102020))
+paste("Max 2020:", max(all_resturants$Profit_052020_102020))
+paste("Min 2021:", min(all_resturants$Profit_052021_102021))
+paste("Mean 2021:", mean(all_resturants$Profit_052021_102021))
+paste("Max 2021:", max(all_resturants$Profit_052021_102021))
+```
+
+
 ```{r threehalf, echo=FALSE}
-ggplot(data = reopened_resturants) +
-  geom_histogram(aes(x = Income_052019_102019, y=(..count..)/sum(..count..)), 
-                 alpha=0.3, fill ="red",position="identity") +
-  geom_histogram(aes(x = Income_052020_102020, y=(..count..)/sum(..count..)), 
-                 alpha=0.3,, fill ="green",position="identity") +
-  geom_histogram(aes(x = Income_052021_102021, y=(..count..)/sum(..count..)), 
-                 alpha=0.7,, fill ="blue",position="identity")
+plot_income <- data.frame(Income_052019_102019 = all_resturants$Income_052019_102019, 
+                          Income_052020_102020 = all_resturants$Income_052020_102020, 
+                           Income_052021_102021 = all_resturants$Income_052021_102021)
+plot_income <- gather(plot_income)
+
+
+ggplot(plot_income, aes(x = value, fill = key)) +
+  geom_density(kernel = "gaussian", alpha = 0.2)
+
+```
+```{r wersdf, echo=FALSE}
+paste("Min 2019:", min(all_resturants$Income_052019_102019))
+paste("Mean 2019:", mean(all_resturants$Income_052019_102019))
+paste("Max 2019:", max(all_resturants$Income_052019_102019))
+paste("Min 2020:", min(all_resturants$Income_052020_102020))
+paste("Mean 2020:", mean(all_resturants$Income_052020_102020))
+paste("Max 2020:", max(all_resturants$Income_052020_102020))
+paste("Min 2021:", min(all_resturants$Income_052021_102021))
+paste("Mean 2021:", mean(all_resturants$Income_052021_102021))
+paste("Max 2021:", max(all_resturants$Income_052021_102021))
 ```
 
-Three year comparison of staff, Red - 2019, Green - 2020, Blue - Reopened 2021
 ```{r four, echo=FALSE}
-ggplot(data = reopened_resturants) +
-  geom_histogram(aes(x = Number_Of_Staff_Before_Covid, y=(..count..)/sum(..count..)), 
-                 alpha=0.3, fill ="red",position="identity") +
-  geom_histogram(aes(x = Number_Of_Staff_During_Covid, y=(..count..)/sum(..count..)), 
-                 alpha=0.3,, fill ="green",position="identity") +
-  geom_histogram(aes(x = Number_Of_Staff_During_Reopen, y=(..count..)/sum(..count..)), 
-                 alpha=0.7,, fill ="blue",position="identity")
+plot_Staff <- data.frame(Staff_052019_102019 = all_resturants$Number_Of_Staff_Before_Covid, 
+                         Staff_052020_102020 = all_resturants$Number_Of_Staff_During_Covid, 
+                          Staff_052021_102021 = all_resturants$Number_Of_Staff_During_Reopen)
+plot_Staff <- gather(plot_Staff)
+
+
+ggplot(plot_Staff, aes(x = value, fill = key)) +
+  geom_density(kernel = "gaussian", alpha = 0.2)
 ```
