--- a/scripts/sample_graphs_rmd.Rmd
+++ b/scripts/sample_graphs_rmd.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "sample_graphs"
+title: "PopulationData"
 author: "Wen Ma"
 date: "2/20/2021"
 output: pdf_document
@@ -11,134 +11,143 @@ library(kableExtra)
 library(dplyr)
 library(ggplot2)
 library(janitor)
+library(tidyr)
 ```
 
 ## R Markdown
 
-Sample graphs
+Population data for reopened resturants
+
+```{r cars, echo=FALSE}
+sample_resturants = read.csv('../dataset/sample_resturants.csv', stringsAsFactors = FALSE)
+```
 
 ## Including Plots
 
-Sample overall, Red - 2019, Green - 2020, Blue - 2021
 
-```{r pressure, echo=FALSE}
-sample_resturants = read.csv('../dataset/sample_resturants.csv', stringsAsFactors = FALSE)
+```{r one, echo=FALSE}
+#Business operation year freq table
+kbl(tabyl(sample_resturants$Business_Operation_Year, sort = TRUE), booktabs = T) %>%
+  kable_styling(latex_options = c("striped", "scale-down"))
+# 1-5 years owns takes 36% of dataset
 
-#histogram over 3 years profit
-ggplot(data = sample_resturants) +
-  geom_histogram(aes(x = Profit_052019_102019, y=(..count..)/sum(..count..)), 
-                 alpha=0.3, fill ="red",position="identity") +
-  geom_histogram(aes(x = Profit_052020_102020, y=(..count..)/sum(..count..)), 
-                 alpha=0.3,, fill ="green",position="identity") +
-  geom_histogram(aes(x = Profit_052021_102021, y=(..count..)/sum(..count..)), 
-                 alpha=0.7,, fill ="blue",position="identity")
+#Frachaise
+kbl(tabyl(sample_resturants$Franchise, sort = TRUE), booktabs = T) %>%
+  kable_styling(latex_options = c("striped", "scale-down"))
+#Even split - 59% Non frachaise vs. 41% frachaise
 
-#histogram over 3 years income
-ggplot(data = sample_resturants) +
-  geom_histogram(aes(x = Income_052019_102019, y=(..count..)/sum(..count..)), 
-                 alpha=0.3, fill ="red",position="identity") +
-  geom_histogram(aes(x = Income_052020_102020, y=(..count..)/sum(..count..)), 
-                 alpha=0.3,, fill ="green",position="identity") +
-  geom_histogram(aes(x = Income_052021_102021, y=(..count..)/sum(..count..)), 
-                 alpha=0.7,, fill ="blue",position="identity")
+#Own / Lease
+kbl(tabyl(sample_resturants$Own_Lease, sort = TRUE), booktabs = T) %>%
+  kable_styling(latex_options = c("striped", "scale-down"))
+#Lease 50%, own 40%, lease to own 10%
 
-#histogram over 3 years staff
-ggplot(data = sample_resturants) +
-  geom_histogram(aes(x = Number_Of_Staff_Before_Covid, y=(..count..)/sum(..count..)), 
-                 alpha=0.3, fill ="red",position="identity") +
-  geom_histogram(aes(x = Number_Of_Staff_During_Covid, y=(..count..)/sum(..count..)), 
-                 alpha=0.3,, fill ="green",position="identity") +
-  geom_histogram(aes(x = Number_Of_Staff_During_Reopen, y=(..count..)/sum(..count..)), 
-                 alpha=0.7,, fill ="blue",position="identity")
 
-```
-\newpage
-Low end resturants, 3 years profit and income, then min and max of income, min and max of profit
-```{r low, echo=FALSE}
+#Pricepoint
+kbl(tabyl(sample_resturants$Price_Point_Target, sort = TRUE), booktabs = T) %>%
+  kable_styling(latex_options = c("striped", "scale-down"))
+#Average 39%, Low-end 40%, High-end 21%
 
-#Low-End Resturants
-low_end_rest <- sample_resturants[sample_resturants$Price_Point_Target == "Low-end", ] 
+#Dine-in Service
+kbl(tabyl(sample_resturants$Dine_In_Service, sort = TRUE), booktabs = T) %>%
+  kable_styling(latex_options = c("striped", "scale-down"))
+#70% Y 30% N
 
-# 3 year profit
-ggplot(data = low_end_rest) +
-  geom_histogram(aes(x = Profit_052019_102019, y=(..count..)/sum(..count..)), 
-                 alpha=0.3, fill ="red",position="identity") +
-  geom_histogram(aes(x = Profit_052020_102020, y=(..count..)/sum(..count..)), 
-                 alpha=0.3,, fill ="green",position="identity") +
-  geom_histogram(aes(x = Profit_052021_102021, y=(..count..)/sum(..count..)), 
-                 alpha=0.7,, fill ="blue",position="identity")
-# 3 year income
-ggplot(data = low_end_rest) +
-  geom_histogram(aes(x = Income_052019_102019, y=(..count..)/sum(..count..)), 
-                 alpha=0.3, fill ="red",position="identity") +
-  geom_histogram(aes(x = Income_052020_102020, y=(..count..)/sum(..count..)), 
-                 alpha=0.3,, fill ="green",position="identity") +
-  geom_histogram(aes(x = Income_052021_102021, y=(..count..)/sum(..count..)), 
-                 alpha=0.7,, fill ="blue",position="identity")
 
-paste("min income is: ",min(low_end_rest$Income_052021_102021)) #225666
-paste("mean income is: ",mean(low_end_rest$Income_052021_102021)) #1435222
-paste("min income is: ",min(low_end_rest$Profit_052021_102021)) #225666
-paste("mean income is: ",mean(low_end_rest$Profit_052021_102021)) #1435222
-```
-\newpage
-Average resturants, 3 years profit and income, then min and mean of income, min and mean of profit
-```{r average, echo=FALSE}
-#Average Resturants
-average_rest <- sample_resturants[sample_resturants$Price_Point_Target == "Average", ]
-
-#3 years profit
-ggplot(data = average_rest) +
-  geom_histogram(aes(x = Profit_052019_102019, y=(..count..)/sum(..count..)), 
-                 alpha=0.3, fill ="red",position="identity") +
-  geom_histogram(aes(x = Profit_052020_102020, y=(..count..)/sum(..count..)), 
-                 alpha=0.3,, fill ="green",position="identity") +
-  geom_histogram(aes(x = Profit_052021_102021, y=(..count..)/sum(..count..)), 
-                 alpha=0.7,, fill ="blue",position="identity")
-
-#3 years income
-ggplot(data = average_rest) +
-  geom_histogram(aes(x = Income_052019_102019, y=(..count..)/sum(..count..)), 
-                 alpha=0.3, fill ="red",position="identity") +
-  geom_histogram(aes(x = Income_052020_102020, y=(..count..)/sum(..count..)), 
-                 alpha=0.3,, fill ="green",position="identity") +
-  geom_histogram(aes(x = Income_052021_102021, y=(..count..)/sum(..count..)), 
-                 alpha=0.7,, fill ="blue",position="identity")
-
-paste("min income is: ",min(average_rest$Income_052021_102021)) #225666
-paste("mean income is: ",mean(average_rest$Income_052021_102021)) #1435222
-paste("min income is: ",min(average_rest$Profit_052021_102021)) #225666
-paste("mean income is: ",mean(average_rest$Profit_052021_102021)) #1435222
-```
-\newpage
-High end resturants, 3 years profit and income, then min and mean of income, min and mean of profit
-```{r high, echo=FALSE}
-
-high_end_rest <- sample_resturants[sample_resturants$Price_Point_Target == "High-end", ]
-#3 years profit
-ggplot(data = high_end_rest) +
-  geom_histogram(aes(x = Profit_052019_102019, y=(..count..)/sum(..count..)), 
-                 alpha=0.3, fill ="red",position="identity") +
-  geom_histogram(aes(x = Profit_052020_102020, y=(..count..)/sum(..count..)), 
-                 alpha=0.3,, fill ="green",position="identity") +
-  geom_histogram(aes(x = Profit_052021_102021, y=(..count..)/sum(..count..)), 
-                 alpha=0.7,, fill ="blue",position="identity")
-
-#3 years income
-ggplot(data = high_end_rest) +
-  geom_histogram(aes(x = Income_052019_102019, y=(..count..)/sum(..count..)), 
-                 alpha=0.3, fill ="red",position="identity") +
-  geom_histogram(aes(x = Income_052020_102020, y=(..count..)/sum(..count..)), 
-                 alpha=0.3,, fill ="green",position="identity") +
-  geom_histogram(aes(x = Income_052021_102021, y=(..count..)/sum(..count..)), 
-                 alpha=0.7,, fill ="blue",position="identity")
-
-paste("min income is: ", min(high_end_rest$Income_052021_102021)) #225666
-paste("mean income is: ",mean(high_end_rest$Income_052021_102021)) #1435222
-paste("min income is: ",min(high_end_rest$Profit_052021_102021)) #225666
-paste("mean income is: ",mean(high_end_rest$Profit_052021_102021)) #1435222
+#Helpfulness
+kbl(tabyl(sample_resturants$Helpfulness_Factor, sort = TRUE), booktabs = T) %>%
+  kable_styling(latex_options = c("striped", "scale-down"))
+#average split of 33%
 ```
 
 
+```{r two, echo=FALSE}
+#Average of everything table
+ave_Income2019 <- mean(sample_resturants$Income_052019_102019)
+ave_Income2020 <- mean(sample_resturants$Income_052020_102020)
+ave_Income2021 <- mean(sample_resturants$Income_052021_102021)
+ave_Profit2019 <- mean(sample_resturants$Profit_052019_102019)
+ave_Profit2020 <- mean(sample_resturants$Profit_052020_102020)
+ave_Profit2021 <- mean(sample_resturants$Profit_052021_102021)
+ave_Staff2019 <- mean(sample_resturants$Number_Of_Staff_Before_Covid)
+ave_Staff2020 <- mean(sample_resturants$Number_Of_Staff_During_Covid)
+ave_Staff2021 <- mean(sample_resturants$Number_Of_Staff_During_Reopen)
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+average_table <- data.frame("ave_Income2019" = ave_Income2019, 
+                            "ave_Income2020" = ave_Income2020, 
+                            "ave_Income2021" = ave_Income2021, 
+                            "ave_Profit2019" = ave_Profit2019, 
+                            "ave_Profit2020" = ave_Profit2020, 
+                            "ave_Profit2021" = ave_Profit2021)
+
+average_staff <- data.frame(
+                              "ave_Staff2019" = ave_Staff2019, 
+                            "ave_Staff2020" = ave_Staff2020, 
+                            "ave_Staff2021" = ave_Staff2021
+)
+kbl(average_table, booktabs = T) %>%
+  kable_styling(latex_options = c("striped", "scale-down"))
+
+kbl(average_staff, booktabs = T) %>%
+  kable_styling(latex_options = c("striped", "scale-down"))
+```
+
+```{r three, echo=FALSE}
+plot_profit <- data.frame(Profit_052019_102019 = sample_resturants$Profit_052019_102019, 
+                                  Profit_052020_102020 = sample_resturants$Profit_052020_102020, 
+                                  Profit_052021_102021 = sample_resturants$Profit_052021_102021)
+plot_profit <- gather(plot_profit)
+
+
+ggplot(plot_profit, aes(x = value, fill = key)) +
+  geom_density(kernel = "gaussian", alpha = 0.2)
+
+
+```
+
+
+```{r whatever, echo=FALSE}
+paste("Min 2019:", min(sample_resturants$Profit_052019_102019))
+paste("Mean 2019:", mean(sample_resturants$Profit_052019_102019))
+paste("Max 2019:", max(sample_resturants$Profit_052019_102019))
+paste("Min 2020:", min(sample_resturants$Profit_052020_102020))
+paste("Mean 2020:", mean(sample_resturants$Profit_052020_102020))
+paste("Max 2020:", max(sample_resturants$Profit_052020_102020))
+paste("Min 2021:", min(sample_resturants$Profit_052021_102021))
+paste("Mean 2021:", mean(sample_resturants$Profit_052021_102021))
+paste("Max 2021:", max(sample_resturants$Profit_052021_102021))
+```
+
+
+```{r threehalf, echo=FALSE}
+plot_income <- data.frame(Income_052019_102019 = sample_resturants$Income_052019_102019, 
+                          Income_052020_102020 = sample_resturants$Income_052020_102020, 
+                           Income_052021_102021 = sample_resturants$Income_052021_102021)
+plot_income <- gather(plot_income)
+
+
+ggplot(plot_income, aes(x = value, fill = key)) +
+  geom_density(kernel = "gaussian", alpha = 0.2)
+
+```
+```{r wersdf, echo=FALSE}
+paste("Min 2019:", min(sample_resturants$Income_052019_102019))
+paste("Mean 2019:", mean(sample_resturants$Income_052019_102019))
+paste("Max 2019:", max(sample_resturants$Income_052019_102019))
+paste("Min 2020:", min(sample_resturants$Income_052020_102020))
+paste("Mean 2020:", mean(sample_resturants$Income_052020_102020))
+paste("Max 2020:", max(sample_resturants$Income_052020_102020))
+paste("Min 2021:", min(sample_resturants$Income_052021_102021))
+paste("Mean 2021:", mean(sample_resturants$Income_052021_102021))
+paste("Max 2021:", max(sample_resturants$Income_052021_102021))
+```
+
+```{r four, echo=FALSE}
+plot_Staff <- data.frame(Staff_052019_102019 = sample_resturants$Number_Of_Staff_Before_Covid, 
+                         Staff_052020_102020 = sample_resturants$Number_Of_Staff_During_Covid, 
+                          Staff_052021_102021 = sample_resturants$Number_Of_Staff_During_Reopen)
+plot_Staff <- gather(plot_Staff)
+
+
+ggplot(plot_Staff, aes(x = value, fill = key)) +
+  geom_density(kernel = "gaussian", alpha = 0.2)
+```
