--- a/outputs/paper/restaurant_references.bib
+++ b/outputs/paper/restaurant_references.bib
@@ -127,3 +127,12 @@ Information},
     note = {R package version 2.1.0},
     url = {https://CRAN.R-project.org/package=janitor},
   }
+  
+  
+@Manual{here,
+    title = {here: A Simpler Way to Find Your Files},
+    author = {Kirill Müller},
+    year = {2020},
+    note = {R package version 1.0.1},
+    url = {https://CRAN.R-project.org/package=here},
+  }
