--- a/outputs/paper/restaurant_references.bib
+++ b/outputs/paper/restaurant_references.bib
@@ -136,3 +136,61 @@ Information},
     note = {R package version 1.0.1},
     url = {https://CRAN.R-project.org/package=here},
   }
+  
+@article{bbc,
+    title={Covid map: Coronavirus cases, deaths, vaccinations by country},
+    url={https://www.bbc.com/news/world-51235105}, 
+    journal={BBC}, 
+    author={BBC}, 
+    year={2021},
+  }
+
+@article{oxfam,
+    title = {Pandemic Profits For Companies Soar By Billions More As Poorest Pay Price},
+    author = {Oxfam},
+    year = {2020},
+    url = {https://www.oxfamamerica.org/press/pandemic-profits-companies-soar-billions-more-poorest-pay-price/}
+  }
+  
+@article{statcan,
+    title = {The Social and Economic Impacts of COVID-19: A Six-month Update: Key Findings},
+    author = {Statistics Canada},
+    year = {2020},
+    url = {https://www150.statcan.gc.ca/n1/pub/11-631-x/2020004/conclusions-eng.htm}
+  }
+    
+@article{harris,
+    title = {Nearly 6 million people have applied for COVID-19 emergency benefits},
+    author = {Kathleen Harris},
+    year = {2020},
+    url = {https://www.cbc.ca/news/politics/covid19-benefits-cerb-1.5530722},
+  }
+
+@article{ourrest,
+    title = {The issues},
+    author = {Our Restaurants},
+    year = {2020},
+    publisher = {Canadian Chamber of Commerce},
+    url = {https://www.ourrestaurants.ca/the-issues}
+  }
+
+@article{larue,
+  title = {Labor issues and COVID-19},
+  author = {Larue, Bruno},
+  journal = {Canadian Journal of Agricultural Economics/Revue canadienne d'agroeconomie},
+  volume = {68},
+  number = {2},
+  pages = {231--237},
+  year = {2020},
+  publisher = {Wiley Online Library}
+}
+    
+  
+@Manual{bookdown,
+    title = {bookdown: Authoring Books and Technical Documents with R Markdown},
+    author = {Yihui Xie},
+    year = {2020},
+    note = {R package version 0.21},
+    url = {https://bookdown.org},
+  }
+    
